[gd_scene load_steps=4 format=3 uid="uid://dsogyisvl8hag"]

[ext_resource type="Script" uid="uid://d04nm7q0hljl" path="res://scripts/sidenav.gd" id="1_7wmdc"]
[ext_resource type="Texture2D" uid="uid://o215gxyvqvib" path="res://assets/mock/general/arrowLeft.png" id="1_64cow"]
[ext_resource type="Texture2D" uid="uid://cfj01nwqkn45x" path="res://assets/mock/sidenav/calendar.png" id="2_71yj4"]

[node name="Sidenav" type="CanvasLayer"]
layer = 100
script = ExtResource("1_7wmdc")

[node name="Sidenav" type="ColorRect" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 250.0
grow_vertical = 2
size_flags_horizontal = 0
mouse_filter = 2
color = Color(0.992157, 0.945098, 0.870588, 1)

[node name="CalendarButton" type="TextureButton" parent="Sidenav"]
layout_mode = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 281.0
offset_bottom = 281.0
scale = Vector2(0.78, 0.78)
texture_normal = ExtResource("2_71yj4")

[node name="ArrowButton" type="TextureButton" parent="."]
offset_left = 265.0
offset_top = 15.0
offset_right = 1290.0
offset_bottom = 1039.0
scale = Vector2(0.05, 0.05)
texture_normal = ExtResource("1_64cow")
stretch_mode = 0

[connection signal="pressed" from="Sidenav/CalendarButton" to="." method="_on_calendar_button_pressed"]
[connection signal="pressed" from="ArrowButton" to="." method="_on_arrow_button_pressed"]
